pcex.js: fixed line number spacing

--- a/editor-services/public/preview/css/style.css
+++ b/editor-services/public/preview/css/style.css
@@ -48,7 +48,7 @@
   width: 21px;
   height: 21px;
   line-height: 21px;
-  margin-right: 5px;
+  margin-left: -5px;
   background-color: red;
 }
 
